# flake8-french

./: .gitignore  README.md  flake8_french.py  setup.cfg
tests/: flake8_french_test.py
