[metadata]
name = flake8_french
version = 1.0.0
description = A flake8 plugin that enforces raw f-strings to be fr"foo" instead of rf"foo"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/3ok/flake8-french
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
py_modules = flake8_french
install_requires =
    flake8>=3.8
python_requires = >=3.8

[options.entry_points]
flake8.extension =
    FRE=flake8_french:Plugin

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
